test/errors/293-fatalerror/302.tex
% tex -interaction=nonstopmode
%% 302 => "End of file on the terminal!"

% run tex in `-interaction=nonstopmode` mode,
% send EOF (ctrl+Z) by hand.

%> ! End of file on the terminal... why?